syntax = "proto3";

package book;

option go_package = "grpc-server/proto;proto";

service BookService {
  rpc GetBooks (GetBooksRequest) returns (GetBooksResponse);
  rpc GetBook (GetBookRequest) returns (GetBookResponse);
  rpc AddBook (AddBookRequest) returns (AddBookResponse);
  rpc RentBook (RentBookRequest) returns (RentBookResponse);
  rpc ReturnBook (ReturnBookRequest) returns (ReturnBookResponse);
}

message GetBooksRequest {}
message GetBooksResponse {
  repeated Book books = 1;
}

message GetBookRequest {
  string id = 1;
}
message GetBookResponse {
  Book book = 1;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  string owner = 4;  // Ownerフィールドを追加
}
message AddBookResponse {
  Book book = 1;
}

message RentBookRequest {
  string user_id = 1;
  string book_id = 2;
}
message RentBookResponse {
  Book book = 1;
}

message ReturnBookRequest {
  string user_id = 1;
  string book_id = 2;
}
message ReturnBookResponse {
  Book book = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  bool available = 5;
  string owner = 6; 
}
